--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -10,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.15.3]
+        node-version: [12]
 
     steps:
       - uses: actions/checkout@v2
@@ -18,9 +18,17 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: yarn install --pure-lockfile
-      - run: yarn test
-      - run: |
+
+      - name: Install yarn
+        run: yarn install --pure-lockfile
+
+      - name: Run Tests
+        run: yarn test
+        env:
+          PORT: 5000
+
+      - name: Export Coverage Report
+        run: |
           sed -i 's+/home/runner/work/jv-backend/jv-backend+/github/workspace+g' coverage/lcov.info
 
       - name: SonarCloud Scan
