--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectName=JV Backend
-sonar.projectKey=jv-backend
+sonar.projectKey=naeemark_jv-backend
 sonar.organization=naeemark-1
 sonar.projectVersion=1.0.0
 
