--- a/package.json
+++ b/package.json
@@ -24,28 +24,39 @@
   "bugs": {
     "url": "https://github.com/naeemark/jv-backend/issues"
   },
-  "homepage": "",
+  "homepage": "https://github.com/naeemark/jv-backend",
+  "_moduleAliases": {
+    "@app": "src",
+    "@config": "src/config",
+    "@middlewares": "src/middlewares",
+    "@services": "src/services",
+    "@utils": "src/utils"
+  },
   "dependencies": {
-    
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "concurrently": "^5.0.1",
     "cors": "^2.8.5",
     "cross-env": "^6.0.3",
+    "crypto-js": "^4.0.0",
     "dotenv-safe": "^8.2.0",
     "es-class": "^2.1.1",
     "express": "^4.17.1",
     "express-validation": "^1.0.3",
     "http-status": "^1.4.2",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
+    "module-alias": "^2.2.2",
     "node-gyp": "^6.0.1",
     "node-sanitizer": "^1.0.5",
     "rebuild": "^0.1.2",
     "response-time": "^2.3.2",
-    "winston": "^3.2.1"
+    "winston": "^3.3.3",
+    "winston-cloudwatch": "^2.3.2"
   },
   "devDependencies": {
     "@types/jest": "^24.0.23",
+    "eslint-import-resolver-module-alias": "^0.1.0",
     "jest": "^24.9.0",
     "jest-dom": "^4.0.0",
     "jest-express": "^1.10.1",
@@ -58,6 +69,17 @@
     "supertest": "^4.0.2"
   },
   "jest": {
+    "moduleNameMapper": {
+      "^@app(.*)$": "<rootDir>/src$1",
+      "^@boot(.*)$": "<rootDir>/src/boot$1",
+      "^@config(.*)$": "<rootDir>/src/config$1",
+      "^@api(.*)$": "<rootDir>/src/api$1",
+      "^@middlewares(.*)$": "<rootDir>/src/middlewares$1",
+      "^@models(.*)$": "<rootDir>/src/models$1",
+      "^@services(.*)$": "<rootDir>/src/services$1",
+      "^@utils(.*)$": "<rootDir>/src/utils$1",
+      "^@repos(.*)$": "<rootDir>/src/repository$1"
+    },
     "setupFilesAfterEnv": [
       "jest-extended"
     ],
