--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -26,6 +26,10 @@ jobs:
         run: yarn test
         env:
           PORT: 5000
+          AWS_DEFAULT_REGION: us-east-1
+          JWT_SECRET: "dummy_secret_goes_here"
+          JWT_EXPIRATION_TIME: "1h"
+          JWT_REFRESH_EXPIRATION_TIME: "5h"
 
       - name: Export Coverage Report
         run: |
