--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -26,6 +26,13 @@ jobs:
         run: yarn test
         env:
           PORT: 5000
+          AWS_DEFAULT_REGION: us-east-1
+          JWT_SECRET: dummy_secret_goes_here
+          JWT_EXPIRATION_TIME: 1h
+          JWT_REFRESH_EXPIRATION_TIME: 5h
+          AWS_REGION: us-east-1
+          AWS_ACCESS_KEY_ID: test-key
+          AWS_SECRET_ACCESS_KEY: test-secret-key
 
       - name: Export Coverage Report
         run: |
