--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 NODE_ENV=dev
 PORT=5000
 AWS_DEFAULT_REGION=us-east-1
+AWS_REGION=us-east-1
 
 JWT_SECRET=dummy_secret_goes_here
 JWT_EXPIRATION_TIME=1h
