--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "concurrently": "^5.0.1",
     "cors": "^2.8.5",
@@ -65,8 +66,7 @@
     "jest-extended": "^0.11.2",
     "jest-tobetype": "^1.2.3",
     "mock-express-request": "^0.2.2",
-    "mock-express-response": "^0.2.2",
-    "mockgoose": "^8.0.4",
+    "mock-express-response": "^0.2.2",    
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2"
   },
