--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Install yarn
         run: yarn install --pure-lockfile
 
+      - name: Run Lint
+        run: yarn lint
+
       - name: Run Tests
         run: yarn test
         env:
