--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ AWS_REGION=us-east-1
 JWT_SECRET=dummy_secret_goes_here
 JWT_EXPIRATION_TIME=1h
 JWT_REFRESH_EXPIRATION_TIME=5h
+
+DYNAMO_TABLE_NAME=jv-backend-dev
