adds outlet model, service, constants

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "import/resolver": "module-alias"
   },
   "rules": {
-    "import/no-extraneous-dependencies": "off"
+    "import/no-extraneous-dependencies": "off",
+    "no-param-reassign": 0
   }
 }
